--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "backend",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node build/index.js",
+    "start-dev": "tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^12.12.20",
+    "amd-loader": "0.0.8",
     "apollo-server-express": "^2.9.12",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
